# Phanty-SDF-Cuda

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.bat  setup.ps1  setup.sh  start.bat  start.ps1  start.sh
include/: Cell.h  OctreeManager.h  Sphere.h  contouring.h  dc_backend.h  dc_cuda.h  hermite_update.h  mesh_to_sdf.h  sample_fun.h  sdf.h  ui.h  vertex_refinement.h
scripts/: context.py  definitions.py  fig-ablation-dc-weight-model.py  fig-ablation-dc-weight-plot.py  fig-ablation-inner-iters-model.py  fig-ablation-inner-iters-plot.py  fig-ablation-outer-iters-model.py  fig-ablation-outer-iters-plot.py  fig-ablation-regularization-model.py  fig-ablation-regularization-plot.py  fig-ablation-uw-model.py  fig-ablation-uw-plot.py  fig-asymptotic-complexity-model.py  fig-asymptotic-complexity-plot.py  fig-box.py  fig-dc-fails-if-hermite-bad.py  fig-limitations.py  fig-marching-methods-fail.py  fig-mind-the-gap.py  fig-narrow-band.py  fig-ours-vs-rfta-error-and-runtime-model.py  fig-ours-vs-rfta-error-and-runtime-plot.py  fig-teaser.py  large-scale-test.py  many-shapes-experiment.py  noise-performance.py  run_ours.py  test_glb_benchmark.py
src/cpp/: Cell.cpp  Sphere.cpp  bindings.cpp  contouring.cpp  dc_backend.cpp  dc_cli.cpp  dc_tests.cpp  hermite_update.cpp  results_analyzer.py  sample_fun.cpp  sdf.cpp  ui.cpp  vertex_refinement.cpp
src/cuda/: dc_cuda.cu  dc_cuda_sparse.cu  mesh_to_sdf_cuda.cu
src/python/contouring/: __init__.py  build_grid.py  py_contouring.py
utility/: __init__.py  axis_angle_rotation_matrix.py  build_rotation_matrix.py  compute_chamfer_dist.py  compute_chamfer_dist_gpy.py  compute_hausdorff_distance.py  context.py  evaluate_mesh_accuracy.py  finite_differences_gradient.py  intersection_sdfs.py  kohlbrenner_reconstruction.py  lie_cone.py  make_capped_cone_sdf.py  make_cylinder_sdf.py  make_rombus_sdf.py  make_rotated_box_sdf.py  make_rotated_box_sdf_center.py  make_sphere_sdf.py  max_sdfs.py  mesh_sampling.py  min_sdfs.py  triangulate_quads.py  union_sdfs.py
webapp/: server.py
webapp/static/: app.js  index.html  style.css
